--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <script src="node_modules/gpu.js/bin/gpu.js"></script>
 <script src="graph_generator.js"></script>
 <script src="bellman_ford_gpu.js"></script>
+<script src="dijkstra.js"></script>
 </body>
 </html>
