browserify gpu.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CS5234 Miniproject</title>
 </head>
 <body>
-<script src="node_modules/gpu.js/bin/gpu.js"></script>
+<script src="gpu-browerify.js"></script>
 <script src="graph_generator.js"></script>
 <script src="bellman_ford_gpu.js"></script>
 <script src="dijkstra.js"></script>
