Add more real life graphs and parser for the data.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <script src="gpu-browerify.js"></script>
 <script src="graph_generator.js"></script>
+<script src="graph_parser.js"></script>
 <script src="bellman_ford_gpu.js"></script>
 <script src="dijkstra.js"></script>
 </body>
